# CyberGrindChallenges

./: Cargo.toml  README.md
migrations/: 20230711202806_initial-tables.sql
src/: db.rs  main.rs
src/models/: error.rs  mod.rs  model.rs
src/models/scores/: dto.rs  model.rs  routes.rs
src/models/variations/: dto.rs  mod.rs  model.rs  routes.rs
